Solved DE Questions.
Solved Data Engineering Questions as per my understanding.

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -2,3 +2,6 @@
  [input]
  booking_file=C:/Users/raman/Documents/GitHub/ramu-amadeus-test/DataSets/bookings.csv
  search_file=C:/Users/raman/Documents/GitHub/ramu-amadeus-test/DataSets/searches.csv
+
+ [output]
+ output_dir=C:/Users/raman/Amadeus_Output
