--- a/resources/config.properties
+++ b/resources/config.properties
@@ -2,6 +2,8 @@
  [input]
  booking_file=C:/Users/raman/Documents/GitHub/ramu-amadeus-test/DataSets/bookings.csv
  search_file=C:/Users/raman/Documents/GitHub/ramu-amadeus-test/DataSets/searches.csv
+ chunk_size=50000
 
  [output]
  output_dir=C:/Users/raman/Amadeus_Output
+
