Bonus 3rd Question SignOff
Bonus 3rd Question Sign Off

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -3,6 +3,7 @@
  booking_file=C:/Users/raman/Documents/GitHub/ramu-amadeus-test/DataSets/bookings.csv
  search_file=C:/Users/raman/Documents/GitHub/ramu-amadeus-test/DataSets/searches.csv
  chunk_size=50000
+ top=20
 
  [output]
  output_dir=C:/Users/raman/Amadeus_Output
